tests/baselines/reference/parserGenericsInTypeContexts1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(1,17): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(1,33): error TS2304: Cannot find name 'B'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(4,9): error TS2315: Type 'C' is not generic.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(5,9): error TS2304: Cannot find name 'D'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(6,9): error TS2503: Cannot find namespace 'E'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(7,9): error TS2503: Cannot find namespace 'G'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(8,9): error TS2304: Cannot find name 'K'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(11,16): error TS2304: Cannot find name 'E'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts(14,16): error TS2304: Cannot find name 'F'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts1.ts (9 errors) ====
    class C extends A<T> implements B<T> {
                    ~
!!! error TS2304: Cannot find name 'A'.
                                    ~
!!! error TS2304: Cannot find name 'B'.
    }
    
    var v1: C<T>;
            ~~~~
!!! error TS2315: Type 'C' is not generic.
    var v2: D<T> = null;
            ~
!!! error TS2304: Cannot find name 'D'.
    var v3: E.F<T>;
            ~
!!! error TS2503: Cannot find namespace 'E'.
    var v3: G.H.I<T>;
            ~
!!! error TS2503: Cannot find namespace 'G'.
    var v6: K<T>[];
            ~
!!! error TS2304: Cannot find name 'K'.
    
    
    function f1(a: E<T>) {
                   ~
!!! error TS2304: Cannot find name 'E'.
    }
    
    function f2(): F<T> {
                   ~
!!! error TS2304: Cannot find name 'F'.
    }
    
    